# transientlib

./: CMakeLists.txt  README.md  transientlib.pc.in
apps/: date2date.cpp
apps/sattest/: main.cpp
config/: mro.qth
doc/: .~lock.Manual_for_creating_satellite_position_predictions.odt#  Manual_for_creating_satellite_position_predictions.odt
scripts/: make_movie.sh  plot_satellites.sh  plotevents.py  print_satellites.sh  print_satellites_ux.sh
src/: AstroBody.cpp  AstroBody.h  AstroCCD.cpp  AstroCCD.h  AstroDefines.h  AstroHeader.h  Astroangle.cpp  Astroangle.h  Header.h  asas_astrometry.c  asas_astrometry.h  asas_errors.h  asas_fitsio.c  asas_fitsio.h  asas_fitsio_exp.h  asas_gparam_def.h  asas_interface.h  astfile.h  astutil.c  astutil.h  baseanal.cpp  baseanal.h  basedefines.cpp  basedefines.h  basestring.cpp  basestring.h  basestructs.cpp  basestructs.h  calcrot.cpp  calcrot.h  cat_new.c  cat_new.h  cat_old.c  cat_old.h  ccd.cpp  ccd.h  ccd_analyse.cpp  ccd_analyse.h  ccd_asastransform.cpp  ccd_asastransform.h  (+201 more)
